--- a/verifier/Cargo.toml
+++ b/verifier/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sandstorm = { path = "../../sandstorm-mirror" }
-layouts = { path = "../../sandstorm-mirror/layouts", package = "sandstorm-layouts" }
-binary = { path = "../../sandstorm-mirror/binary", package = "sandstorm-binary" }
-ministark = { path = "../../ministark-mirror", package = "ministark" }
+sandstorm = { path = "../../sandstorm" }
+layouts = { path = "../../sandstorm/layouts", package = "sandstorm-layouts" }
+binary = { path = "../../sandstorm/binary", package = "sandstorm" }
+ministark = { path = "../../ministark", package = "ministark" }
 ark-ff = "0.4"
 ark-serialize = "0.4"
 serde_json = "1.0"
@@ -21,8 +21,8 @@ getrandom = { version = "0.2", features = ["js"] }
 num-bigint = "0.4"
 
 [build-dependencies]
-ministark-gpu = { path = "../../ministark-mirror/gpu", features = [ "arkworks" ] }
-binary = { path = "../../sandstorm-mirror/binary", package = "sandstorm-binary" }
+ministark-gpu = { path = "../../ministark/gpu", features = [ "arkworks" ] }
+binary = { path = "../../sandstorm/binary", package = "sandstorm" }
 ark-serialize = "0.4"
 serde_json = "1.0"
 serde = "1.0.136"
